<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sliding</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <color name="white">#FFFFFF</color>    
   	<color name="black">#000000</color>   	
 	<color name="green">#008000</color>
    <string name="importButton">Import</string>
    <string name="shuffle">Shuffle</string>
    <string name="loadpic">Load Image</string>
    <string name="imgdesc">Grid</string>
    <string name="gallery">Gallery</string>
    <string name="deleted">Picture Removed from Sliding Folder</string>
    <string name="play">Play</string>
    <string name="options">Options</string>
    <string name="difficult">Difficult:  </string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="ok">OK</string>

</resources>