<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="10" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="5"
	        android:gravity="right"
	        android:text="@string/difficult"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/black" />

	    <TextView
	        android:id="@+id/text_dif"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/normal"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/black"
            android:layout_weight="5" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="10" >

        <Button
            android:id="@+id/button_easy"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:text="@string/easy"
            android:layout_weight="5"
            android:onClick="options" />

        <Button
            android:id="@+id/button_normal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:text="@string/normal"
            android:layout_weight="5"
            android:onClick="options" />

    </LinearLayout>


</LinearLayout>
